--- a/app/views/greetings/hello.html.erb
+++ b/app/views/greetings/hello.html.erb
@@ -1,2 +1,3 @@
-<h1>Greetings#hello</h1>
-<p>Find me in app/views/greetings/hello.html.erb</p>
+<h1>Hi, MCR Crew!</h1>
+
+<h2>Welcome to your new dashboard.</h2>
